--- a/css/style-footer.css
+++ b/css/style-footer.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 footer.footer-container {
-  background-color: #0072F8;
+  background-color: #0056d2;
   color: #fff;
   font-family: 'Montserrat';
   display: flex;
